fix: :lipstick: layout with gap in toolbar

--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     flex: 1;
 
+    mat-toolbar{ gap: 1rem; }
     mat-toolbar h1{ flex: 1; }
 }
 
